Styled as php array

--- a/email-signature-new.html
+++ b/email-signature-new.html
@@ -5,13 +5,15 @@
 <title>Jefferson Real - Email Signature</title>
 <style>
 	.ExternalClass {
-        table {
-          border-collapse:separate;
-      }
+		width: 100%;
+	}
+	table {
+		border-collapse: separate;
+	}
 	a,
 	a:link,
 	a:visited {
-		text-decoration: none;
+		text-decoration: underline;
 		color: #00788a;
 	}
 	a:hover {
@@ -33,9 +35,7 @@
 	.ExternalClass span,
 	.ExternalClass font,
 	.ExternalClass td {
-	line-height: 100%;
-	}
-    	width: 100%;
+		line-height: 100%;
 	}
 </style>
 </head>
@@ -44,16 +44,16 @@
 -- 
 </pre>
 <table
-    border="1px"
+    border="0px"
     bordercolor="faf"
     height="128px"
-    width="320px"
-    cellspacing="0"
-    cellpadding="0"
+    width="400px"
+    cellspacing="0px"
+    cellpadding="1px"
     color="#fff"
     bgcolor="#262626"
     style="
-        font-size: 16px;
+        font-size: 14px;
         font-family: monospace;
         color: #fff;
         background-color: #262626;
@@ -63,74 +63,245 @@
         border-right-width: 0px;
         border-bottom-width: 0px;
         border-left-width: 0px;
+		border-bottom-left-radius: 6px;
+		border-bottom-right-radius: 6px;
         -webkit-border-horizontal-spacing: 0px;
         -webkit-border-vertical-spacing: 0px;  ">
     <tr height="8px" class="spacer"></tr>
     <tr>
-        <td>
-            <td width="38px" class="spacer"></td>
-            <td align="left">
-                Jefferson Real
-            </td>
-        </td>
+		<td>
+			<table
+				border="0px"
+				cellspacing="0"
+				cellpadding="0"
+				align="left"
+				style="
+				    font-size: 14px;
+        			font-family: monospace;
+					margin-left: 12px !important;
+				"
+			>
+				<tr>
+					<td align="left">
+						Jefferson Real = [
+					</td>
+				</tr>
+			</table
+		</td>
     </tr>
     <tr>
-        <td align="left">
-            Web Design & Dev
-        </td>
+		<td>
+			<table
+				border="0px"
+				cellspacing="0"
+				cellpadding="0"
+				align="left"
+				style="
+				    font-size: 14px;
+        			font-family: monospace;
+					margin-left: 12px !important;
+				"
+			>
+				<tr>
+					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
+					<td align="left">
+						'Role'
+					</td>
+					<td align="left">
+						&nbsp&nbsp&nbsp&nbsp=> 'Freelance Web Developer'
+					</td>
+				</tr>
+			</table
+		</td>
     </tr>
-    <tr>
-        <td align="left">
-            <a
-                title="Visit My Website"
-                href="https://bigupweb.uk/"
-                color="#fff"
-                style="
-                    font-family: monospace;
-                    color: #fff;"
-            >
-                bigupweb.uk
-            </a>
-        </td>
+	<tr>
+		<td>
+			<table
+				border="0px"
+				cellspacing="0"
+				cellpadding="0"
+				align="left"
+				style="
+				    font-size: 14px;
+        			font-family: monospace;
+					margin-left: 12px !important;
+				"
+			>
+				<tr>
+					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
+					<td align="left">
+						'Website'
+					</td>
+					<td align="left">
+						&nbsp=>
+						<span>&apos;</span><a
+							title="Visit My Website"
+							href="https://bigupweb.uk/"
+							color="#fff"
+							style="
+								font-family: monospace;
+								color: #fff;"
+						>bigupweb.uk</a><span>&apos;</span>
+					</td>
+				</tr>
+			</table
+		</td>
     </tr>
-    <tr>
-        <td align="left">
-            <a
-                title="Visit My Codepen Profile"
-                href="https://codepen.io/bigupjeff"                color="#fff"
-                style="
-                    font-family: monospace;
-                    color: #fff;"
-            >
-                Codepen
-            </a>                                      
-        </td>
+	<tr>
+		<td>
+			<table
+				border="0px"
+				cellspacing="0"
+				cellpadding="0"
+				align="left"
+				style="
+				    font-size: 14px;
+        			font-family: monospace;
+					margin-left: 12px !important;
+				"
+			>
+				<tr>
+					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
+					<td align="left">
+						'Social'
+					</td>
+					<td align="left">
+						&nbsp&nbsp=>&nbsp[
+					</td>
+				</tr>
+			</table
+		</td>
     </tr>
-    <tr>
-        <td align="left">
-            <a
-                title="Visit My Instagram Profile"
-                href="https://www.instagram.com/bigupweb/"                color="#fff"
-                style="
-                    font-family: monospace;
-                    color: #fff;"
-            >
-                Instagram
-            </a>
-        </td>
+	<tr>
+		<td>
+			<table
+				border="0px"
+				cellspacing="0"
+				cellpadding="0"
+				align="left"
+				style="
+				    font-size: 14px;
+        			font-family: monospace;
+					margin-left: 12px !important;
+				"
+			>
+				<tr>
+					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
+					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
+					<td align="left">
+						<span>&apos;</span><a
+							title="Visit My Codepen Profile"
+							href="https://codepen.io/bigupjeff"                color="#fff"
+							style="
+								font-family: monospace;
+								color: #fff;"
+						>Codepen</a><span>&apos;</span>
+					</td>
+				</tr>
+			</table
+		</td>
     </tr>
-    <tr>
-        <td align="left">
-            <a  
-                title="Visit My Facebook Profile"
-                href="https://www.facebook.com/bigupweb"                color="#fff"
-                style="
-                    font-family: monospace;
-                    color: #fff;"
-            >
-                Facebook
-            </a>
-        </td>
+	<tr>
+		<td>
+			<table
+				border="0px"
+				cellspacing="0"
+				cellpadding="0"
+				align="left"
+				style="
+				    font-size: 14px;
+        			font-family: monospace;
+					margin-left: 12px !important;
+				"
+			>
+				<tr>
+					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
+					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
+					<td align="left">
+						<span>&apos;</span><a
+							title="Visit My Instagram Profile"
+							href="https://www.instagram.com/bigupweb/"                color="#fff"
+							style="
+								font-family: monospace;
+								color: #fff;"
+						>Instagram</a><span>&apos;</span>
+					</td>
+				</tr>
+			</table
+		</td>
+    </tr>
+	<tr>
+		<td>
+			<table
+				border="0px"
+				cellspacing="0"
+				cellpadding="0"
+				align="left"
+				style="
+				    font-size: 14px;
+        			font-family: monospace;
+					margin-left: 12px !important;
+				"
+			>
+				<tr>
+					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
+					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
+					<td align="left">
+						<span>&apos;</span><a
+						title="Visit My Facebook Profile"
+						href="https://www.facebook.com/bigupweb"
+						color="#fff"
+						style="
+							font-family: monospace;
+							color: #fff;"
+						>Facebook</a><span>&apos;</span>
+					</td>
+				</tr>
+			</table
+		</td>
+    </tr>
+	<tr>
+		<td>
+			<table
+				border="0px"
+				cellspacing="0"
+				cellpadding="0"
+				align="left"
+				style="
+				    font-size: 14px;
+        			font-family: monospace;
+					margin-left: 12px !important;
+				"
+			>
+				<tr>
+					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
+					<td align="left">
+						<span>]</span>
+					</td>
+				</tr>
+			</table
+		</td>
+    </tr>
+	<tr>
+		<td>
+			<table
+				border="0px"
+				cellspacing="0"
+				cellpadding="0"
+				align="left"
+				style="
+				    font-size: 14px;
+        			font-family: monospace;
+					margin-left: 12px !important;
+				"
+			>
+				<tr>
+					<td align="left">
+						<span>]</span>
+					</td>
+				</tr>
+			</table
+		</td>
     </tr>
     <tr height="8px" class="spacer"></tr>
 </table>
