--- a/email-signature-new.html
+++ b/email-signature-new.html
@@ -63,10 +63,43 @@
         border-right-width: 0px;
         border-bottom-width: 0px;
         border-left-width: 0px;
+		border-top-left-radius: 5px;
+		border-top-right-radius: 5px;
 		border-bottom-left-radius: 5px;
 		border-bottom-right-radius: 5px;
         -webkit-border-horizontal-spacing: 0px;
         -webkit-border-vertical-spacing: 0px;  ">
+	<tr>
+		<td>
+			<table
+				border="0px"
+				cellspacing="0"
+				cellpadding="0"
+				align="left"
+				style="
+					font-size: 16px;
+					font-family: monospace;
+					margin-left: 12px !important;
+					padding-bottom: 5px;
+					padding-top: 5px;
+					width: 100%;
+				"
+			>
+				<tr>
+					<td align="left">
+						<span
+							color="#fff"
+							style="
+								color: #fff;
+								font-size: 26x;
+							">&bull;</span>
+						<span>&bull;</span>
+						<span>&bull;</span>
+					</td>
+				</tr>
+			</table
+		</td>
+	</tr>
     <tr height="8px" class="spacer"></tr>
     <tr>
 		<td>
