--- a/email-signature-new.html
+++ b/email-signature-new.html
@@ -11,13 +11,15 @@
 		border-collapse: separate;
 	}
 	a,
-	a:link,
+	a:link {
+		text-decoration: underline;
+	}
 	a:visited {
 		text-decoration: underline;
-		color: #00788a;
 	}
 	a:hover {
 		text-decoration: underline;
+		color: #fff !important;
 	}
 	h2,
 	h2 a,
@@ -51,14 +53,8 @@
     cellspacing="0px"
     cellpadding="1px"
     color="#fff"
-    bgcolor="#262626"
+    bgcolor="#282a36"
     style="
-        font-size: 14px;
-        font-family: monospace;
-        color: #fff;
-        background-color: #262626;
-        border-collapse: collapse;
-        padding:0;
         border-top-width: 0px;
         border-right-width: 0px;
         border-bottom-width: 0px;
@@ -67,9 +63,20 @@
 		border-top-right-radius: 5px;
 		border-bottom-left-radius: 5px;
 		border-bottom-right-radius: 5px;
+        background-color: #282a36;
+        padding:0;
+		width: 400px;
+		max-width: 100%;
+        border-collapse: collapse;
+        color: #fff;
+        font-family: monospace;
+        font-size: 14px;
+		font-weight: bold;
         -webkit-border-horizontal-spacing: 0px;
-        -webkit-border-vertical-spacing: 0px;  ">
-	<tr>
+        -webkit-border-vertical-spacing: 0px;
+	"
+>
+	<tr class="sig-windowbar">
 		<td>
 			<table
 				border="0px"
@@ -77,31 +84,37 @@
 				cellpadding="0"
 				align="left"
 				style="
-					font-size: 16px;
-					font-family: monospace;
-					margin-left: 12px !important;
-					padding-bottom: 5px;
-					padding-top: 5px;
+					margin-left: 0px !important;
+        			background-color: #3c3e4d;
+					padding-top: 1px;
+					padding-bottom: 1px;
 					width: 100%;
+					font-family: monospace;
+					font-size: 16px;
 				"
 			>
 				<tr>
 					<td align="left">
-						<span
-							color="#fff"
+						<b 
+							color="#989aa8"
 							style="
-								color: #fff;
-								font-size: 26x;
-							">&bull;</span>
-						<span>&bull;</span>
-						<span>&bull;</span>
+								margin-left: 12px !important;
+								vertical-align: middle;
+								color: #989aa8;
+								font-size: 12px;
+							"
+						>
+							<span style="font-size: 28px;">&bull;</span>
+							<span style="font-size: 28px;">&bull;</span>
+							<span style="font-size: 28px;">&bull;</span>
+						</b>	
 					</td>
 				</tr>
 			</table
 		</td>
 	</tr>
     <tr height="8px" class="spacer"></tr>
-    <tr>
+    <tr class="sig-personstart">
 		<td>
 			<table
 				border="0px"
@@ -109,20 +122,25 @@
 				cellpadding="0"
 				align="left"
 				style="
-				    font-size: 14px;
-        			font-family: monospace;
 					margin-left: 12px !important;
+        			font-family: monospace;
+				    font-size: 14px;
 				"
 			>
 				<tr>
 					<td align="left">
-						Jefferson Real = [
+						<span style="color:#50fa7b">
+							Jefferson_Real
+						</span>
+						<span style="color:#6272a4">
+							= [
+						</span>
 					</td>
 				</tr>
 			</table
 		</td>
     </tr>
-    <tr>
+    <tr class="sig-jobtitle">
 		<td>
 			<table
 				border="0px"
@@ -130,24 +148,21 @@
 				cellpadding="0"
 				align="left"
 				style="
-				    font-size: 14px;
-        			font-family: monospace;
 					margin-left: 12px !important;
+        			font-family: monospace;
+				    font-size: 14px;
 				"
 			>
 				<tr>
 					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
 					<td align="left">
-						'Role'
-					</td>
-					<td align="left">
-						&nbsp&nbsp&nbsp&nbsp=> 'Freelance Web Developer'
+						<span style="color:#6272a4">'</span><span style="color:#ffb86c">Freelance Web Developer</span><span style="color:#6272a4">'&comma;</span>
 					</td>
 				</tr>
 			</table
 		</td>
     </tr>
-	<tr>
+	<tr class="sig-website">
 		<td>
 			<table
 				border="0px"
@@ -155,32 +170,28 @@
 				cellpadding="0"
 				align="left"
 				style="
-				    font-size: 14px;
-        			font-family: monospace;
 					margin-left: 12px !important;
+        			font-family: monospace;
+				    font-size: 14px;
 				"
 			>
 				<tr>
 					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
 					<td align="left">
-						'Website'
-					</td>
-					<td align="left">
-						&nbsp=>
-						<span>&apos;</span><a
+						<span style="color:#6272a4">&apos;</span><a
 							title="Visit My Website"
-							href="https://bigupweb.uk/"
-							color="#fff"
+							href="https://jeffersonreal.uk/"
 							style="
+								color: #8be9fd;
 								font-family: monospace;
-								color: #fff;"
-						>bigupweb.uk</a><span>&apos;</span>
+							"
+						>jeffersonreal.uk</a><span style="color:#6272a4">&apos;&comma;</span>
 					</td>
 				</tr>
 			</table
 		</td>
     </tr>
-	<tr>
+	<tr class="sig-email">
 		<td>
 			<table
 				border="0px"
@@ -188,24 +199,28 @@
 				cellpadding="0"
 				align="left"
 				style="
-				    font-size: 14px;
-        			font-family: monospace;
 					margin-left: 12px !important;
+        			font-family: monospace;
+				    font-size: 14px;
 				"
 			>
 				<tr>
 					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
 					<td align="left">
-						'Social'
-					</td>
-					<td align="left">
-						&nbsp&nbsp=>&nbsp[
+						<span style="color:#6272a4">&apos;</span><a
+							title="Visit My Website"
+							href="mailto:me@jeffersonreal.uk?subject=Email%20signature%20click"
+							style="
+								color: #f1fa8c;
+								font-family: monospace;
+							"
+						>me@jeffersonreal.uk</a><span style="color:#6272a4">&apos;&comma;</span>
 					</td>
 				</tr>
 			</table
 		</td>
     </tr>
-	<tr>
+	<tr class="sig-phone">
 		<td>
 			<table
 				border="0px"
@@ -213,28 +228,80 @@
 				cellpadding="0"
 				align="left"
 				style="
-				    font-size: 14px;
-        			font-family: monospace;
 					margin-left: 12px !important;
+        			font-family: monospace;
+				    font-size: 14px;
+				"
+			>
+				<tr>
+					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
+					<td align="left">
+						<span style="color:#6272a4">&apos;</span><a
+							title="Visit My Website"
+							href="tel:07584279323"
+							style="
+								color: #ff5555;
+								font-family: monospace;
+							"
+						>07584 279323</a><span style="color:#6272a4">&apos;&comma;</span>
+					</td>
+				</tr>
+			</table
+		</td>
+    </tr>
+	<tr class="sig-socialstart">
+		<td>
+			<table
+				border="0px"
+				cellspacing="0"
+				cellpadding="0"
+				align="left"
+				style="
+					margin-left: 12px !important;
+        			font-family: monospace;
+				    font-size: 14px;
+				"
+			>
+				<tr>
+					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
+					<td align="left">
+						<span style="color:#6272a4">[</span>
+					</td>
+				</tr>
+			</table
+		</td>
+    </tr>
+	<tr class="sig-social1">
+		<td>
+			<table
+				border="0px"
+				cellspacing="0"
+				cellpadding="0"
+				align="left"
+				style="
+					margin-left: 12px !important;
+        			font-family: monospace;
+				    font-size: 14px;
 				"
 			>
 				<tr>
 					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
 					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
 					<td align="left">
-						<span>&apos;</span><a
+						<span style="color:#6272a4">&apos;</span><a
 							title="Visit My Codepen Profile"
-							href="https://codepen.io/bigupjeff"                color="#fff"
+							href="https://codepen.io/bigupjeff"
 							style="
+								color: #ff79c6;
 								font-family: monospace;
-								color: #fff;"
-						>Codepen</a><span>&apos;</span>
+							"
+						>Codepen</a><span style="color:#6272a4">&apos;&comma;</span>
 					</td>
 				</tr>
 			</table
 		</td>
     </tr>
-	<tr>
+	<tr class="sig-social2">
 		<td>
 			<table
 				border="0px"
@@ -242,28 +309,29 @@
 				cellpadding="0"
 				align="left"
 				style="
-				    font-size: 14px;
-        			font-family: monospace;
 					margin-left: 12px !important;
+        			font-family: monospace;
+				    font-size: 14px;
 				"
 			>
 				<tr>
 					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
 					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
 					<td align="left">
-						<span>&apos;</span><a
+						<span style="color:#6272a4">&apos;</span><a
 							title="Visit My Instagram Profile"
-							href="https://www.instagram.com/bigupweb/"                color="#fff"
+							href="https://www.instagram.com/bigupweb/"
 							style="
+								color: #ff79c6;
 								font-family: monospace;
-								color: #fff;"
-						>Instagram</a><span>&apos;</span>
+							"
+						>Instagram</a><span style="color:#6272a4">&apos;&comma;</span>
 					</td>
 				</tr>
 			</table
 		</td>
     </tr>
-	<tr>
+	<tr class="sig-social3">
 		<td>
 			<table
 				border="0px"
@@ -271,29 +339,29 @@
 				cellpadding="0"
 				align="left"
 				style="
-				    font-size: 14px;
-        			font-family: monospace;
 					margin-left: 12px !important;
+        			font-family: monospace;
+				    font-size: 14px;
 				"
 			>
 				<tr>
 					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
 					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
 					<td align="left">
-						<span>&apos;</span><a
+						<span style="color:#6272a4">&apos;</span><a
 						title="Visit My Facebook Profile"
 						href="https://www.facebook.com/bigupweb"
-						color="#fff"
 						style="
+							color: #ff79c6;
 							font-family: monospace;
-							color: #fff;"
-						>Facebook</a><span>&apos;</span>
+						"
+						>Facebook</a><span style="color:#6272a4">&apos;</span>
 					</td>
 				</tr>
 			</table
 		</td>
     </tr>
-	<tr>
+	<tr class="sig-socialend">
 		<td>
 			<table
 				border="0px"
@@ -301,21 +369,21 @@
 				cellpadding="0"
 				align="left"
 				style="
-				    font-size: 14px;
-        			font-family: monospace;
 					margin-left: 12px !important;
+        			font-family: monospace;
+				    font-size: 14px;
 				"
 			>
 				<tr>
 					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
 					<td align="left">
-						<span>]</span>
+						<span style="color:#6272a4">]</span>
 					</td>
 				</tr>
 			</table
 		</td>
     </tr>
-	<tr>
+	<tr class="sig-personend">
 		<td>
 			<table
 				border="0px"
@@ -323,14 +391,14 @@
 				cellpadding="0"
 				align="left"
 				style="
-				    font-size: 14px;
-        			font-family: monospace;
 					margin-left: 12px !important;
+        			font-family: monospace;
+				    font-size: 14px;
 				"
 			>
 				<tr>
 					<td align="left">
-						<span>]</span>
+						<span style="color:#6272a4">]</span>
 					</td>
 				</tr>
 			</table
