--- a/email-signature-new.html
+++ b/email-signature-new.html
@@ -27,9 +27,9 @@
 	h3,
 	h3 a,
 	h3 a:visited,
- 	h4,
+	h4,
 	h5,
- 	h6,
+	h6,
 	.t_cht {
 		color:#000 !important;
 	}
@@ -46,30 +46,26 @@
 -- 
 </pre>
 <table
-    border="0px"
-    bordercolor="faf"
-    height="128px"
-    width="400px"
-    cellspacing="0px"
-    cellpadding="1px"
-    color="#fff"
+	align="left"
     bgcolor="#282a36"
+    border="0px"
+    bordercolor="#0000"
+    cellpadding="1px"
+    cellspacing="0"
+    color="#fff"
+    width="520px"
     style="
-        border-top-width: 0px;
-        border-right-width: 0px;
-        border-bottom-width: 0px;
-        border-left-width: 0px;
 		border-top-left-radius: 5px;
 		border-top-right-radius: 5px;
 		border-bottom-left-radius: 5px;
 		border-bottom-right-radius: 5px;
         background-color: #282a36;
         padding:0;
-		width: 400px;
+		width: 520px;
 		max-width: 100%;
         border-collapse: collapse;
         color: #fff;
-        font-family: monospace;
+        font-family: 'courier new', monospace;
         font-size: 14px;
 		font-weight: bold;
         -webkit-border-horizontal-spacing: 0px;
@@ -79,29 +75,32 @@
 	<tr class="sig-windowbar">
 		<td>
 			<table
-				border="0px"
-				cellspacing="0"
-				cellpadding="0"
 				align="left"
+				border="0px"
+				cellpadding="1px"
+				cellspacing="0"
 				style="
 					margin-left: 0px !important;
+					border-top-left-radius: 5px;
+					border-top-right-radius: 5px;
         			background-color: #3c3e4d;
-					padding-top: 1px;
-					padding-bottom: 1px;
 					width: 100%;
-					font-family: monospace;
-					font-size: 16px;
+					font-family: 'courier new', monospace;
+					font-size: 5px;
 				"
 			>
 				<tr>
-					<td align="left">
+					<td>
 						<b 
 							color="#989aa8"
 							style="
-								margin-left: 12px !important;
+								margin-left: 10px !important;
 								vertical-align: middle;
 								color: #989aa8;
-								font-size: 12px;
+								font-size: 5px;
+								margin:0;
+								line-height: 1;
+								mso-line-height-rule:exactly; 
 							"
 						>
 							<span style="font-size: 28px;">&bull;</span>
@@ -110,301 +109,222 @@
 						</b>	
 					</td>
 				</tr>
-			</table
+			</table>
 		</td>
 	</tr>
-    <tr height="8px" class="spacer"></tr>
+    <tr class="spacer" style="font-size:1px;"><td><span>&nbsp;</span></td></tr>
     <tr class="sig-personstart">
 		<td>
 			<table
-				border="0px"
-				cellspacing="0"
-				cellpadding="0"
 				align="left"
+				border="0px"
+				cellpadding="1px"
+				cellspacing="0"
 				style="
-					margin-left: 12px !important;
-        			font-family: monospace;
+					margin-left: 14px !important;
+        			font-family: 'courier new', monospace;
 				    font-size: 14px;
 				"
 			>
 				<tr>
-					<td align="left">
-						<span style="color:#50fa7b">
+					<td>
+						<b style="color:#50fa7b">
 							Jefferson_Real
-						</span>
-						<span style="color:#6272a4">
+						</b>
+						<b style="color:#6272a4">
 							= [
-						</span>
+						</b>
 					</td>
 				</tr>
-			</table
+			</table>
 		</td>
     </tr>
     <tr class="sig-jobtitle">
 		<td>
 			<table
-				border="0px"
-				cellspacing="0"
-				cellpadding="0"
 				align="left"
+				border="0px"
+				cellpadding="1px"
+				cellspacing="0"
 				style="
-					margin-left: 12px !important;
-        			font-family: monospace;
+					margin-left: 14px !important;
+        			font-family: 'courier new', monospace;
 				    font-size: 14px;
 				"
 			>
 				<tr>
 					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
-					<td align="left">
-						<span style="color:#6272a4">'</span><span style="color:#ffb86c">Freelance Web Developer</span><span style="color:#6272a4">'&comma;</span>
+					<td>
+						<b style="color:#6272a4">'</b><b style="color:#ffb86c">Freelance Web Developer</b><b style="color:#6272a4">'&comma;</b>
 					</td>
 				</tr>
-			</table
+			</table>
 		</td>
     </tr>
 	<tr class="sig-website">
 		<td>
 			<table
-				border="0px"
-				cellspacing="0"
-				cellpadding="0"
 				align="left"
+				border="0px"
+				cellpadding="1px"
+				cellspacing="0"
 				style="
-					margin-left: 12px !important;
-        			font-family: monospace;
+					margin-left: 14px !important;
+        			font-family: 'courier new', monospace;
 				    font-size: 14px;
 				"
 			>
 				<tr>
 					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
-					<td align="left">
-						<span style="color:#6272a4">&apos;</span><a
+					<td>
+						<b style="color:#6272a4">&apos;</b><b><a
 							title="Visit My Website"
 							href="https://jeffersonreal.uk/"
 							style="
 								color: #8be9fd;
-								font-family: monospace;
+								font-family: 'courier new', monospace;
 							"
-						>jeffersonreal.uk</a><span style="color:#6272a4">&apos;&comma;</span>
+						>jeffersonreal.uk</a></b><b style="color:#6272a4">&apos;&comma;</b>
 					</td>
 				</tr>
-			</table
+			</table>
 		</td>
     </tr>
 	<tr class="sig-email">
 		<td>
 			<table
-				border="0px"
-				cellspacing="0"
-				cellpadding="0"
 				align="left"
+				border="0px"
+				cellpadding="1px"
+				cellspacing="0"
 				style="
-					margin-left: 12px !important;
-        			font-family: monospace;
+					margin-left: 14px !important;
+        			font-family: 'courier new', monospace;
 				    font-size: 14px;
 				"
 			>
 				<tr>
 					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
-					<td align="left">
-						<span style="color:#6272a4">&apos;</span><a
+					<td>
+						<b style="color:#6272a4">&apos;</b><b><a
 							title="Visit My Website"
 							href="mailto:me@jeffersonreal.uk?subject=Email%20signature%20click"
 							style="
 								color: #f1fa8c;
-								font-family: monospace;
+								font-family: 'courier new', monospace;
 							"
-						>me@jeffersonreal.uk</a><span style="color:#6272a4">&apos;&comma;</span>
+						>me@jeffersonreal.uk</a></b><b style="color:#6272a4">&apos;&comma;</b>
 					</td>
 				</tr>
-			</table
+			</table>
 		</td>
     </tr>
 	<tr class="sig-phone">
 		<td>
 			<table
-				border="0px"
-				cellspacing="0"
-				cellpadding="0"
 				align="left"
+				border="0px"
+				cellpadding="1px"
+				cellspacing="0"
 				style="
-					margin-left: 12px !important;
-        			font-family: monospace;
+					margin-left: 14px !important;
+        			font-family: 'courier new', monospace;
 				    font-size: 14px;
 				"
 			>
 				<tr>
 					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
-					<td align="left">
-						<span style="color:#6272a4">&apos;</span><a
+					<td>
+						<b style="color:#6272a4">&apos;</b><b><a
 							title="Visit My Website"
 							href="tel:07584279323"
 							style="
 								color: #ff5555;
-								font-family: monospace;
+								font-family: 'courier new', monospace;
 							"
-						>07584 279323</a><span style="color:#6272a4">&apos;&comma;</span>
+						>07584 279323</a></b><b style="color:#6272a4">&apos;&comma;</b>
 					</td>
 				</tr>
-			</table
+			</table>
 		</td>
     </tr>
-	<tr class="sig-socialstart">
+	<tr class="sig-social">
 		<td>
 			<table
-				border="0px"
-				cellspacing="0"
-				cellpadding="0"
 				align="left"
+				border="0px"
+				cellpadding="1px"
+				cellspacing="0"
 				style="
-					margin-left: 12px !important;
-        			font-family: monospace;
-				    font-size: 14px;
+					margin-left: 14px !important;
+					font-family: 'courier new', monospace;
+					font-size: 14px;
 				"
 			>
 				<tr>
 					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
-					<td align="left">
-						<span style="color:#6272a4">[</span>
-					</td>
-				</tr>
-			</table
-		</td>
-    </tr>
-	<tr class="sig-social1">
-		<td>
-			<table
-				border="0px"
-				cellspacing="0"
-				cellpadding="0"
-				align="left"
-				style="
-					margin-left: 12px !important;
-        			font-family: monospace;
-				    font-size: 14px;
-				"
-			>
-				<tr>
-					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
-					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
-					<td align="left">
-						<span style="color:#6272a4">&apos;</span><a
+					<td>
+						<b style="color:#6272a4">[</b>
+						<b style="color:#6272a4">&apos;</b><b><a
+							title="Visit My Twitter Profile"
+							href="https://twitter.com/BigupJeff"
+							style="
+								color: #ff79c6;
+								font-family: 'courier new', monospace;
+							"
+						>Twitter</a></b><b style="color:#6272a4">&apos;&comma;</b>
+						<b style="color:#6272a4">&apos;</b><b><a
 							title="Visit My Codepen Profile"
 							href="https://codepen.io/bigupjeff"
 							style="
 								color: #ff79c6;
-								font-family: monospace;
+								font-family: 'courier new', monospace;
 							"
-						>Codepen</a><span style="color:#6272a4">&apos;&comma;</span>
-					</td>
-				</tr>
-			</table
-		</td>
-    </tr>
-	<tr class="sig-social2">
-		<td>
-			<table
-				border="0px"
-				cellspacing="0"
-				cellpadding="0"
-				align="left"
-				style="
-					margin-left: 12px !important;
-        			font-family: monospace;
-				    font-size: 14px;
-				"
-			>
-				<tr>
-					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
-					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
-					<td align="left">
-						<span style="color:#6272a4">&apos;</span><a
+						>Codepen</a></b><b style="color:#6272a4">&apos;&comma;</b>
+						<b style="color:#6272a4">&apos;</b><b><a
 							title="Visit My Instagram Profile"
 							href="https://www.instagram.com/bigupweb/"
 							style="
 								color: #ff79c6;
-								font-family: monospace;
+								font-family: 'courier new', monospace;
 							"
-						>Instagram</a><span style="color:#6272a4">&apos;&comma;</span>
-					</td>
-				</tr>
-			</table
-		</td>
-    </tr>
-	<tr class="sig-social3">
-		<td>
-			<table
-				border="0px"
-				cellspacing="0"
-				cellpadding="0"
-				align="left"
-				style="
-					margin-left: 12px !important;
-        			font-family: monospace;
-				    font-size: 14px;
-				"
-			>
-				<tr>
-					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
-					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
-					<td align="left">
-						<span style="color:#6272a4">&apos;</span><a
+						>Instagram</a></b><b style="color:#6272a4">&apos;&comma;</b>
+						<b style="color:#6272a4">&apos;</b><b><a
 						title="Visit My Facebook Profile"
 						href="https://www.facebook.com/bigupweb"
 						style="
 							color: #ff79c6;
-							font-family: monospace;
+							font-family: 'courier new', monospace;
 						"
-						>Facebook</a><span style="color:#6272a4">&apos;</span>
+						>Facebook</a></b><b style="color:#6272a4">&apos;</b>
+						<b style="color:#6272a4">]</b>
 					</td>
 				</tr>
-			</table
+			</table>
 		</td>
-    </tr>
-	<tr class="sig-socialend">
-		<td>
-			<table
-				border="0px"
-				cellspacing="0"
-				cellpadding="0"
-				align="left"
-				style="
-					margin-left: 12px !important;
-        			font-family: monospace;
-				    font-size: 14px;
-				"
-			>
-				<tr>
-					<td class="tab">&nbsp&nbsp&nbsp&nbsp</td>
-					<td align="left">
-						<span style="color:#6272a4">]</span>
-					</td>
-				</tr>
-			</table
-		</td>
-    </tr>
+	</tr>
 	<tr class="sig-personend">
 		<td>
 			<table
-				border="0px"
-				cellspacing="0"
-				cellpadding="0"
 				align="left"
+				border="0px"
+				cellpadding="1px"
+				cellspacing="0"
 				style="
-					margin-left: 12px !important;
-        			font-family: monospace;
+					margin-left: 14px !important;
+        			font-family: 'courier new', monospace;
 				    font-size: 14px;
 				"
 			>
 				<tr>
-					<td align="left">
-						<span style="color:#6272a4">]</span>
+					<td>
+						<b style="color:#6272a4">]</b>
 					</td>
 				</tr>
-			</table
+			</table>
 		</td>
     </tr>
-    <tr height="8px" class="spacer"></tr>
+    <tr class="spacer" style="font-size:1px;"><td><span>&nbsp;</span></td></tr>
 </table>
 </body>
 </html>
