--- a/email-signature-new.html
+++ b/email-signature-new.html
@@ -19,7 +19,7 @@
 	}
 	a:hover {
 		text-decoration: underline;
-		color: #fff !important;
+		color: #fff!important;
 	}
 	h2,
 	h2 a,
@@ -31,7 +31,7 @@
 	h5,
 	h6,
 	.t_cht {
-		color:#000 !important;
+		color:#000!important;
 	}
 	.ExternalClass p,
 	.ExternalClass span,
@@ -42,7 +42,7 @@
 </style>
 </head>
 <body>
-<pre style="color:#fff;">
+<pre class="email-standard-sig-identifier" style="color:#fff;">
 -- 
 </pre>
 <table
@@ -80,7 +80,8 @@
 				cellpadding="1px"
 				cellspacing="0"
 				style="
-					margin-left: 0px !important;
+					margin-left: 0px;
+					margin-left: 0px!important;
 					border-top-left-radius: 5px;
 					border-top-right-radius: 5px;
         			background-color: #3c3e4d;
@@ -94,7 +95,8 @@
 						<b 
 							color="#989aa8"
 							style="
-								margin-left: 10px !important;
+								margin-left: 10px;
+								margin-left: 10px!important;
 								vertical-align: middle;
 								color: #989aa8;
 								font-size: 5px;
@@ -121,7 +123,8 @@
 				cellpadding="1px"
 				cellspacing="0"
 				style="
-					margin-left: 14px !important;
+					margin-left: 14px;
+					margin-left: 14px!important;
         			font-family: 'courier new', monospace;
 				    font-size: 14px;
 				"
@@ -147,7 +150,8 @@
 				cellpadding="1px"
 				cellspacing="0"
 				style="
-					margin-left: 14px !important;
+					margin-left: 14px;
+					margin-left: 14px!important;
         			font-family: 'courier new', monospace;
 				    font-size: 14px;
 				"
@@ -169,7 +173,8 @@
 				cellpadding="1px"
 				cellspacing="0"
 				style="
-					margin-left: 14px !important;
+					margin-left: 14px;
+					margin-left: 14px!important;
         			font-family: 'courier new', monospace;
 				    font-size: 14px;
 				"
@@ -198,7 +203,8 @@
 				cellpadding="1px"
 				cellspacing="0"
 				style="
-					margin-left: 14px !important;
+					margin-left: 14px;
+					margin-left: 14px!important;
         			font-family: 'courier new', monospace;
 				    font-size: 14px;
 				"
@@ -227,7 +233,8 @@
 				cellpadding="1px"
 				cellspacing="0"
 				style="
-					margin-left: 14px !important;
+					margin-left: 14px;
+					margin-left: 14px!important;
         			font-family: 'courier new', monospace;
 				    font-size: 14px;
 				"
@@ -256,7 +263,8 @@
 				cellpadding="1px"
 				cellspacing="0"
 				style="
-					margin-left: 14px !important;
+					margin-left: 14px;
+					margin-left: 14px!important;
 					font-family: 'courier new', monospace;
 					font-size: 14px;
 				"
@@ -311,7 +319,8 @@
 				cellpadding="1px"
 				cellspacing="0"
 				style="
-					margin-left: 14px !important;
+					margin-left: 14px;
+					margin-left: 14px!important;
         			font-family: 'courier new', monospace;
 				    font-size: 14px;
 				"
