--- a/email-signature.html
+++ b/email-signature.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <!--signature delimiter-->
-<pre style="color:#fff;">
+<pre class="email-standard-sig-identifier" style="color:#fff;">
 -- 
 </pre>
 <!--shadow5-->
